// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`_checkValue invalid " __lazy-wildcards/subject/__env-elem/stairs/prompts__ " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "/__" in value near "ldcards/subject/__env-elem/stairs"",
  "index": 25,
  "match": "/__",
  "near": "ldcards/subject/__env-elem/stairs",
  "value": " __lazy-wildcards/subject/__env-elem/stairs/prompts__ ",
}
`;

exports[`_checkValue invalid " __lazy-wildcards/subject/env-elem/stairs/prompts_ " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "_ " in value near "/stairs/prompts_ "",
  "index": 49,
  "match": "_ ",
  "near": "/stairs/prompts_ ",
  "value": " __lazy-wildcards/subject/env-elem/stairs/prompts_ ",
}
`;

exports[`_checkValue invalid " __lazy-wildcards/subject/env-elem__/stairs/prompts__ " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "__/" in value near "ubject/env-elem__/stairs/prompts_"",
  "index": 34,
  "match": "__/",
  "near": "ubject/env-elem__/stairs/prompts_",
  "value": " __lazy-wildcards/subject/env-elem__/stairs/prompts__ ",
}
`;

exports[`_checkValue invalid " _lazy-wildcards/subject/env-elem/stairs/prompts__ " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] " _" in value near " _lazy-wildcards/"",
  "index": 0,
  "match": " _",
  "near": " _lazy-wildcards/",
  "value": " _lazy-wildcards/subject/env-elem/stairs/prompts__ ",
}
`;

exports[`_checkValue invalid " {__lazy-wildcards/subject/env-elem/stairs/prompts_} " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "_}" in value near "/stairs/prompts_} "",
  "index": 50,
  "match": "_}",
  "near": "/stairs/prompts_} ",
  "value": " {__lazy-wildcards/subject/env-elem/stairs/prompts_} ",
}
`;

exports[`_checkValue invalid " {_lazy-wildcards/subject/env-elem/stairs/prompts__} " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "{_" in value near " {_lazy-wildcards/"",
  "index": 1,
  "match": "{_",
  "near": " {_lazy-wildcards/",
  "value": " {_lazy-wildcards/subject/env-elem/stairs/prompts__} ",
}
`;

exports[`_checkValue invalid "(cum\\n{, __1/subject/costume-elem/cum/costume-elem2__|}\\n{, __2/subject/costume-elem/cum/costume-elem__|\\n{, __3/subject/costume-elem/cum-base/prompts__{0.3:::{1.2|1.3|1.4}|}|})\\n" 1`] = `
{
  "error": "Invalid Syntax [BRACKET] Unable to parse. Unclosed Bracket detected near "tume-elem2__|}
{, __2/subject/costume-elem/cum/costume-elem__|
{, __3/subject/costume-elem/cum-"",
  "index": 55,
  "near": "tume-elem2__|}
{, __2/subject/costume-elem/cum/costume-elem__|
{, __3/subject/costume-elem/cum-",
  "value": "(cum
{, __1/subject/costume-elem/cum/costume-elem2__|}
{, __2/subject/costume-elem/cum/costume-elem__|
{, __3/subject/costume-elem/cum-base/prompts__{0.3:::{1.2|1.3|1.4}|}|})
",
}
`;

exports[`_checkValue invalid "__costume-ethnicity-breasts/tits-rocket/fn/rocket_tits(v=!xxx)__" 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "(v=!" in value near "/fn/rocket_tits(v=!xxx)__"",
  "index": 54,
  "match": "(v=!",
  "near": "/fn/rocket_tits(v=!xxx)__",
  "value": "__costume-ethnicity-breasts/tits-rocket/fn/rocket_tits(v=!xxx)__",
}
`;

exports[`_checkValue invalid "__costume-ethnicity-breasts/tits-rocket/fn/rocket_tits(v=\${x})__" 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "(v=$" in value near "/fn/rocket_tits(v=\${x})__"",
  "index": 54,
  "match": "(v=$",
  "near": "/fn/rocket_tits(v=\${x})__",
  "value": "__costume-ethnicity-breasts/tits-rocket/fn/rocket_tits(v=\${x})__",
}
`;

exports[`_checkValue invalid "__costume-ethnicity-breasts/tits-rocket/fn/rocket_tits(v={x})__" 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "(v={" in value near "/fn/rocket_tits(v={x})__"",
  "index": 54,
  "match": "(v={",
  "near": "/fn/rocket_tits(v={x})__",
  "value": "__costume-ethnicity-breasts/tits-rocket/fn/rocket_tits(v={x})__",
}
`;

exports[`doc.options 1`] = `
{
  "_directives": Directives {
    "atNextDocument": false,
    "docEnd": false,
    "docStart": null,
    "tags": {
      "!!": "tag:yaml.org,2002:",
    },
    "yaml": {
      "explicit": false,
      "version": "1.2",
    },
  },
  "allowEmptyDocument": true,
  "expandForwardSlashKeys": true,
  "intAsBigInt": false,
  "keepSourceTokens": false,
  "logLevel": "warn",
  "prettyErrors": true,
  "strict": true,
  "stringKeys": false,
  "toStringDefaults": {
    "allowMultiRoot": undefined,
    "blockQuote": true,
    "collectionStyle": "block",
    "defaultKeyType": "PLAIN",
    "defaultStringType": "PLAIN",
    "disableUniqueItemValues": undefined,
    "disableUnsafeQuote": undefined,
    "expandForwardSlashKeys": undefined,
    "minifyPrompts": undefined,
    "uniqueKeys": true,
  },
  "uniqueKeys": true,
  "version": "1.2",
}
`;

exports[`matchDynamicPromptsWildcards " __scope/season_clothes(season= )__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season= )__",
  "variables": "(season= )",
}
`;

exports[`matchDynamicPromptsWildcards " __scope/season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards " __season_clothes(season= )__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season= )__",
  "variables": "(season= )",
}
`;

exports[`matchDynamicPromptsWildcards " __season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__@scope/season_clothes(season=__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "@",
  "name": "scope/season_clothes",
  "source": "__@scope/season_clothes(season=__scope/season_clothes__)__",
  "variables": "(season=__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__@season_clothes(season=__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "@",
  "name": "season_clothes",
  "source": "__@season_clothes(season=__season_clothes__)__",
  "variables": "(season=__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__~scope/season_clothes(season=__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "scope/season_clothes",
  "source": "__~scope/season_clothes(season=__scope/season_clothes__)__",
  "variables": "(season=__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__~scope/season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "scope/season_clothes",
  "source": "__~scope/season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__~season_clothes(season=__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "season_clothes",
  "source": "__~season_clothes(season=__season_clothes__)__",
  "variables": "(season=__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__~season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "season_clothes",
  "source": "__~season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main__ __person/regular/haircolor-unconv(k=)__ __lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-*__" 1`] = `
[
  {
    "isFullMatch": false,
    "isStarWildcards": false,
    "keyword": undefined,
    "name": "lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main",
    "source": "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main__",
    "variables": undefined,
  },
  {
    "isFullMatch": false,
    "isStarWildcards": false,
    "keyword": undefined,
    "name": "person/regular/haircolor-unconv",
    "source": "__person/regular/haircolor-unconv(k=)__",
    "variables": "(k=)",
  },
  {
    "isFullMatch": false,
    "isStarWildcards": true,
    "keyword": undefined,
    "name": "lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-*",
    "source": "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-*__",
    "variables": undefined,
  },
]
`;

exports[`matchDynamicPromptsWildcards "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main",
  "source": "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main__",
  "variables": undefined,
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!__scope/season_clothes__)__",
  "variables": "(season=!__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!{!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!{!summer|autumn|winter|spring})__",
  "variables": "(season=!{!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!{@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!{@summer|autumn|winter|spring})__",
  "variables": "(season=!{@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!{summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!{summer|autumn|winter|spring})__",
  "variables": "(season=!{summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=__@scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=__@scope/season_clothes__)__",
  "variables": "(season=__@scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=__~scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=__~scope/season_clothes__)__",
  "variables": "(season=__~scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=__scope/season_clothes__)__",
  "variables": "(season=__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season={!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season={!summer|autumn|winter|spring})__",
  "variables": "(season={!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season={@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season={@summer|autumn|winter|spring})__",
  "variables": "(season={@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season={summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season={summer|autumn|winter|spring})__",
  "variables": "(season={summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes__",
  "variables": undefined,
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!__season_clothes__)__",
  "variables": "(season=!__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!{!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!{!summer|autumn|winter|spring})__",
  "variables": "(season=!{!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!{@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!{@summer|autumn|winter|spring})__",
  "variables": "(season=!{@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!{summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!{summer|autumn|winter|spring})__",
  "variables": "(season=!{summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=__@season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=__@season_clothes__)__",
  "variables": "(season=__@season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=__~season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=__~season_clothes__)__",
  "variables": "(season=__~season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=__season_clothes__)__",
  "variables": "(season=__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season={!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season={!summer|autumn|winter|spring})__",
  "variables": "(season={!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season={@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season={@summer|autumn|winter|spring})__",
  "variables": "(season={@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season={summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season={summer|autumn|winter|spring})__",
  "variables": "(season={summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes__",
  "variables": undefined,
}
`;

exports[`utils "\${c=!__lazy-wildcards/utils/color-base__} \\n__lazy-wildcards/subject/env-elem/sky_lantern/fn/sky_lantern__" 1`] = `"\${c=!__lazy-wildcards/utils/color-base__}__lazy-wildcards/subject/env-elem/sky_lantern/fn/sky_lantern__"`;

exports[`utils "\${person_description = { blond| redhead | brunette}, {green|blue|brown|hazel} eyes, {tall|average|short}}\\nA \${person_description} man and a \${person_description} woman" 1`] = `"\${person_description={ blond| redhead | brunette}, {green|blue|brown|hazel} eyes, {tall|average|short}}A \${person_description} man and a \${person_description} woman"`;

exports[`utils "\${v1=!{{very |}small |}} \\n __lazy-wildcards/subject/costume-ethnicity-breasts/tits-rocket/fn/rocket_tits__" 1`] = `"\${v1=!{{very |}small |}}__lazy-wildcards/subject/costume-ethnicity-breasts/tits-rocket/fn/rocket_tits__"`;
